<resources>
    <string name="fonts_" formatted="false">Fonts</string>
    <string name="about_" formatted="false">About</string>
    <string name="about_hint" formatted="false">About this app</string>
    <string name="faq_hint" formatted="false">Some tips and tricks, how to set up this app.</string>
    <string name="feedback_" formatted="false">Feedback</string>
    <string name="feedback_hint" formatted="false">Report bugs, request features ...</string>
    <string name="google_plus_hint" formatted="false">Follow me on Google+.\nGet update notifications etc.</string>
    <string name="about0" formatted="false">MyanSMS lets you read your sms and write sms with any other app.</string>
    <string name="more_apps_" formatted="false">More Apps..</string>
    <string name="settings" formatted="false">Settings</string>
    <string name="new_message_" formatted="false">New message</string>
    <string name="new_message" formatted="false">1 unread message.</string>
    <string name="new_messages_" formatted="false">New messages</string>
    <string name="new_messages" formatted="false">%d unread messages.</string>
    <string name="call" formatted="false">Call</string>
    <string name="reply" formatted="false">Reply</string>
    <string name="send_" formatted="false">Send</string>
    <string name="notification_" formatted="false">Notifications</string>
    <string name="notification_enable_" formatted="false">Enable notifications</string>
    <string name="notification_enable_hint" formatted="false">Enable notifications on receive</string>
    <string name="receive_vibrate_" formatted="false">Vibrate</string>
    <string name="receive_vibrate_hint" formatted="false">Vibrate on receive</string>
    <string name="receive_vibrate_mode_" formatted="false">Vibrator mode</string>
    <string name="receive_sound_" formatted="false">Sound</string>
    <string name="receive_sound_hint" formatted="false">Sound on receive</string>
    <string name="receive_led_color_" formatted="false">LED color</string>
    <string name="receive_led_flash_" formatted="false">LED mode</string>
    <string name="receive_led_flash_hint" formatted="false">Set LED flashing behaviour</string>
    <string name="receive_no_text_" formatted="false">Hide sender/text</string>
    <string name="receive_no_text_hint" formatted="false">Hide sender/text in notification.</string>
    <string name="behavior_" formatted="false">Behavior</string>
    <string name="autosend_" formatted="false">Autosend</string>
    <string name="appearance_and_behavior_" formatted="false">Appearance &amp; behavior</string>
    <string name="autosend_hint" formatted="false">Send answers automatically. Currently only WebSMS supports this feature. Other apps will just show the text.</string>
    <string name="show_text_field_" formatted="false">Show text field</string>
    <string name="show_text_field_hint" formatted="false">Show text field instead of answer button.</string>
    <string name="show_target_app_" formatted="false">Show target app</string>
    <string name="show_target_app_hint" formatted="false">Show target App used for sending on \"send\" Button.</string>
    <string name="appearance_" formatted="false">Appearance</string>
    <string name="theme_" formatted="false">Theme</string>
    <string name="textsize_" formatted="false">Text size</string>
    <string name="textsize_hint" formatted="false">Text size in pixels; leave empty for default</string>
    <string name="textcolor_" formatted="false">Text color</string>
    <string name="textcolor_hint" formatted="false">Message text\'s color.</string>
    <string name="textcolor_ignore_conv_" formatted="false">Ignore text color for threads</string>
    <string name="textcolor_ignore_conv_hint" formatted="false">Ignore text color in list of threads.</string>
    <string name="show_contact_photo_" formatted="false">Show photo</string>
    <string name="show_contact_photo_hint" formatted="false">Show contact\'s photo in conversation list</string>
    <string name="embed_zawgyi" formatted="false">Embed Zawgyi</string>
    <string name="convert_output">Convert Output</string>
    <string name="convert_output_summary">Convert on long touch message box</string>
    <string name="auto_convert_summary">Auto convert on send</string>
    <string name="auto_convert">Auto Convert</string>
    <string name="embed_zawgyi_summary" formateed="false">Embed Zawgyi Font (Low CPU Usage)</string>
    <string name="convert_font" formatted="false">Detect and Convert</string>
    <string name="convert_font_summary" formateed="false">Detect and convert to Unicode (High CPU Usage)</string>
    <string name="show_emoticons_" formatted="false">Show emoticons</string>
    <string name="show_emoticons_hint" formatted="false">Show emoticons in message list.</string>
    <string name="hide_send_" formatted="false">Hide "send" button</string>
    <string name="hide_send_hint" formatted="false">Hide "send" button near text field.</string>
    <string name="hide_restore_" formatted="false">Hide "restore last message" button</string>
    <string name="hide_restore_hint" formatted="false">Hide "restore last message" button in message list.</string>
    <string name="hide_paste_" formatted="false">Hide "paste" button</string>
    <string name="hide_paste_hint" formatted="false">Hide "paste" button on text field.</string>
    <string name="hide_widget_label_" formatted="false">Hide widget\'s label</string>
    <string name="hide_widget_label_hint" formatted="false">Hide the label of the widget.</string>
    <string name="hide_delete_all_threads_" formatted="false">Hide delete all threads</string>
    <string name="hide_delete_all_threads_hint" formatted="false">Hide delete all threads menu option.</string>
    <string name="hide_message_count_" formatted="false">Hide message counts</string>
    <string name="hide_message_count_hint" formatted="false">Hide message counts on conversation list.</string>
    <string name="show_full_date_" formatted="false">Show full date</string>
    <string name="show_full_date_hint" formatted="false">Show full date and time on every message.</string>
    <string name="me" formatted="false">Me</string>
    <string name="view_contact_" formatted="false">View contact</string>
    <string name="add_contact_" formatted="false">Add to contacts</string>
    <string name="view_thread_" formatted="false">View thread</string>
    <string name="filter_spam_" formatted="false">Mark as Spam</string>
    <string name="dont_filter_spam_" formatted="false">Remove from Blacklist</string>
    <string name="delete_message_" formatted="false">Delete message</string>
    <string name="delete_thread_" formatted="false">Delete thread</string>
    <string name="forward_" formatted="false">Forward</string>
    <string name="send_draft_" formatted="false">Send draft</string>
    <string name="copy_text_" formatted="false">Copy message text</string>
    <string name="view_details_" formatted="false">View message details</string>
    <string name="delete_threads_" formatted="false">Delete all threads</string>
    <string name="mark_all_read_" formatted="false">Mark all as read</string>
    <string name="mark_read_" formatted="false">Mark read</string>
    <string name="mark_unread_" formatted="false">Mark unread</string>
    <string name="message_options_" formatted="false">Message options</string>
    <string name="delete_message_question" formatted="false">Do you really want to delete this message?</string>
    <string name="delete_thread_question" formatted="false">Do you really want to delete <b>all messages of this thread</b>?</string>
    <string name="delete_threads_question" formatted="false">Do you really want to delete <b>all messages</b>?</string>
    <string name="from_" formatted="false">From:</string>
    <string name="to_" formatted="false">To:</string>
    <string name="to_hint" formatted="false">Name or Number</string>
    <string name="type_" formatted="false">Type:</string>
    <string name="sent_" formatted="false">Sent:</string>
    <string name="received_" formatted="false">Received:</string>
    <string name="view_mms" formatted="false">View MMS</string>
    <string name="mms_conversation" formatted="false">&lt;MMS body&gt;</string>
    <string name="import_contact_" formatted="false">Import contact</string>
    <string name="download_" formatted="false">Download</string>
    <string name="downloading_" formatted="false">Downloading..</string>
    <string name="error_conv_null" formatted="false">Error getting conversation from DB!</string>
    <string name="error_sending_failed" formatted="false">Sending failed</string>
    <string name="text_hint" formatted="false">Text</string>
    <string name="paste_" formatted="false">[Paste from clipboard]</string>
    <string name="restore_" formatted="false">Restore last message</string>
    <string name="attachment_saved" formatted="false">Saved attachment on SD card as:</string>
    <string name="attachment_not_saved" formatted="false">Could not save attachment.</string>
    <string name="chooser_" formatted="false">Chooser</string>
    <string name="notification_icon_" formatted="false">Notification icon</string>
    <string name="notification_default_" formatted="false">Default</string>
    <string name="notification_gingerbread_" formatted="false">Gingerbread</string>
    <string name="notification_gingerbread_mail_" formatted="false">Gingerbread mail</string>
    <string name="notification_black_" formatted="false">Black</string>
    <string name="notification_green_" formatted="false">Green</string>
    <string name="notification_yellow_" formatted="false">Yellow</string>
    <string name="bubbles_in_" formatted="false">Bubbles in</string>
    <string name="bubbles_in_hint" formatted="false">Bubbles for incoming messages</string>
    <string name="bubbles_out_" formatted="false">Bubbles out</string>
    <string name="bubbles_out_hint" formatted="false">Bubbles for outgoing messages</string>
    <string name="bubbles_nothing" formatted="false">Nothing</string>
    <string name="bubbles_plain_dark_gray" formatted="false">Plain dark gray</string>
    <string name="bubbles_plain_light_gray" formatted="false">Plain light gray</string>
    <string name="bubbles_old_turquoise_left" formatted="false">Old turquoise left</string>
    <string name="bubbles_old_turquoise_right" formatted="false">Old turquoise right</string>
    <string name="bubbles_old_green_left" formatted="false">Old green left</string>
    <string name="bubbles_old_green_right" formatted="false">Old green right</string>
    <string name="bubbles_blue_left" formatted="false">Blue left</string>
    <string name="bubbles_blue_right" formatted="false">Blue right</string>
    <string name="bubbles_blue2_left" formatted="false">Blue 2 left</string>
    <string name="bubbles_blue2_right" formatted="false">Blue 2 right</string>
    <string name="bubbles_brown_left" formatted="false">Brown left</string>
    <string name="bubbles_brown_right" formatted="false">Brown right</string>
    <string name="bubbles_gray_left" formatted="false">Gray left</string>
    <string name="bubbles_gray_right" formatted="false">Gray right</string>
    <string name="bubbles_green_left" formatted="false">Green left</string>
    <string name="bubbles_green_right" formatted="false">Green right</string>
    <string name="bubbles_green2_left" formatted="false">Green 2 left</string>
    <string name="bubbles_green2_right" formatted="false">Green 2 right</string>
    <string name="bubbles_orange_left" formatted="false">Orange left</string>
    <string name="bubbles_orange_right" formatted="false">Orange right</string>
    <string name="bubbles_pink_left" formatted="false">Pink left</string>
    <string name="bubbles_pink_right" formatted="false">Pink right</string>
    <string name="bubbles_purple_left" formatted="false">Purple left</string>
</resources>