<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009-2015 Felix Bechstein --><!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
--><!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="light"
        android:entries="@array/themes"
        android:entryValues="@array/themes_values"
        android:key="theme"
        android:title="@string/theme_" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_contact_photo"
        android:summary="@string/show_contact_photo_hint"
        android:title="@string/show_contact_photo_" />

    <CheckBoxPreference
        android:key="show_full_date"
        android:summary="@string/show_full_date_hint"
        android:title="@string/show_full_date_" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hide_message_count"
        android:summary="@string/hide_message_count_hint"
        android:title="@string/hide_message_count_" />

</PreferenceScreen>
