<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009-2015 Felix Bechstein --><!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
--><!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="embed_zawgyi"
        android:summary="@string/embed_zawgyi_summary"
        android:title="@string/embed_zawgyi" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="convert_font"
        android:summary="@string/convert_font_summary"
        android:title="@string/convert_font" />

</PreferenceScreen>
